resolution bug overflow

--- a/client/src/sass/style.scss
+++ b/client/src/sass/style.scss
@@ -562,7 +562,8 @@ p {
           margin-right: 0px;
           transition: all linear 0.3s;
           opacity: 0;
-          display: none;
+          display: flex;
+          align-items: center;
 
           &:hover {
             transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.3s;
@@ -577,8 +578,8 @@ p {
           }
 
           img {
-            margin-top: 50%;
-            transform: translateY(-50%);
+            // margin-top: 50%;
+            // transform: translateY(-50%);
           }
         }
 
@@ -694,10 +695,10 @@ p {
                 right: 0;
                 z-index: 1;
                 opacity: 0.3 !important;
-                display: block;
+                
               }
 
-              display: block;
+              
               opacity: 1;
               transition: all linear 0.3s;
 
